# visuai-research-agent

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SETUP_INSTRUCTIONS.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
docker/: Dockerfile  docker-compose.yml
docs/: api.md  author.md  changelog.md  index.md  installation.md  quickstart.md  tutorials.md
examples/: demo.py  quickstart.py
examples/notebooks/: tutorial.ipynb
pages/: index.html
scripts/: validate_setup.py
src/visuai/: __init__.py  api.py  cli.py
src/visuai/agents/: __init__.py  analyzer.py  explainer.py  exporter.py  visualizer.py
src/visuai/core/: __init__.py  agent.py  config.py  result.py
src/visuai/parsers/: __init__.py  data_parser.py
src/visuai/utils/: helpers.py  logger.py
src/visuai/web/: app.py
tests/: __init__.py
tests/integration/: test_end_to_end.py
tests/unit/: test_agents.py  test_parser.py
