[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visuai-research-agent"
version = "1.0.0"
description = "AI-Powered Research Data Visualization Agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Muhammad Yasir Imam", email = "imammuhammadyasir@gmail.com"}
]
keywords = [
    "ai",
    "agent",
    "visualization",
    "research",
    "data-science",
    "machine-learning",
    "xai",
    "charts",
    "graphs",
    "academic",
    "publication"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/muhammadyasirimam/visuai-research-agent"
Documentation = "https://muhammadyasirimam.github.io/visuai-research-agent"
"Bug Tracker" = "https://github.com/muhammadyasirimam/visuai-research-agent/issues"
"ResearchGate" = "https://www.researchgate.net/profile/Muhammad-Yasir-Imam"
"Google Scholar" = "https://scholar.google.com/citations?user=b80oc1UAAAAJ"

[project.scripts]
visuai = "visuai.cli:main"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
